prevent text wrap in donate online button on donate page

--- a/app/assets/stylesheets/donate.css.scss
+++ b/app/assets/stylesheets/donate.css.scss
@@ -21,7 +21,7 @@
     display: block;
     font-size: 2.5em;
     margin: 30px auto;
-    padding: 2px 30px;
+    padding: 2px 29px;
     text-decoration: none;
     transition: background-color 0.1s ease-in-out;
     width: 216px;
